syntax="proto2";
  
package yamcs.protobuf.cfdp;
option java_package = "org.yamcs.protobuf";

import "google/protobuf/timestamp.proto";

enum TransferDirection {
  UPLOAD = 1;
  DOWNLOAD = 2;
}

enum TransferState {
  RUNNING = 1;
  PAUSED = 2;
  FAILED = 3;
  COMPLETED = 4;
}

message RemoteFile {
  required string filepath = 1;
  required bool isDirectory = 2;
}

//message sent as reponse to the info and also when starting a new transfer
message TransferInfo {
  optional uint64 transactionId = 1;
  optional google.protobuf.Timestamp startTime = 2;
  optional TransferState state = 3;

  optional string bucket = 4;
  optional string objectName = 5;

  optional string remotePath = 6;
  optional TransferDirection direction = 7;

  optional uint64 totalSize = 8;
  optional uint64 sizeTransferred = 9;
  optional bool reliable = 10;
}

message CreateTransferRequest {
  message UploadOptions {
    optional bool overwrite = 1;
    optional bool createPath = 2;
    optional bool reliable = 3;
  }
  message DownloadOptions {
  }

  optional TransferDirection direction = 1;
  optional string bucket = 2;
  optional string objectName = 3;
  optional string remotePath = 4;
  optional DownloadOptions downloadOptions = 5;
  optional UploadOptions uploadOptions = 6;
}

message EditTransferRequest {
  optional string operation = 1;
}

//message sent as the response to the transfer listing
message ListTransfersResponse {
  repeated TransferInfo transfer = 1;
}

//message sent as the reponse to the list call
message ListRemoteFilesResponse {
  required string remotePath = 1;
  repeated RemoteFile filepaths = 2;
}
